# nspy

./: README.md  pyproject.toml  setup.py
docs/: advanced.md  api.md  esia_login.md  guide.md  index.md
examples/: basic_diary.py  calc_average.py  download_attachments.py  login_esia.py  login_password.py  login_qr.py  mail.py
netschoolapi/: __init__.py  client.py  exceptions.py  http.py  models.py  regions.py
netschoolpy/: client.py  http.py  models.py  regions.py
tests/: test_client.py  test_models.py  test_regions.py  test_session_store.py
